--- a/style.css
+++ b/style.css
@@ -1,115 +1,27 @@
-:root {
-  --dark: rgb(20, 20, 20);
-  --yellow: rgb(253, 216, 53);
-  --blue: rgb(98, 0, 234);
-  
-  --c1: rgb(3, 7, 18);
-  --c2: rgb(163, 230, 53);
-  
-  --left-color: var(--c1);
-  --right-color: var(--c2);
-}
-
-body {  
-  background-color: var(--dark);
-  margin: 0px;
-}
-
-.side {
-  display: grid;
-  height: 100vh;
-  overflow: hidden;
-  place-items: center;
-  position: absolute;
-  width: 100%;
-}
-
-.side .title {
+/* Button Styles */
+#subpage-button {
+  background-color: var(--c2);
+  border: 2px solid var(--c1);
+  border-radius: 10px;
+  color: var(--c1);
   font-family: "Montserrat", sans-serif;
-  font-size: 7vw;
-  font-weight: 800;
-  margin: 0px 10vw;
-  width: 80vw;
-}
-
-.side .fancy {
-  font-family: "Permanent Marker", cursive;
-  font-size: 1.8em;
-  line-height: 0.6em;
-}
-
-#left-side {
-  background-color: var(--left-color);
-  width: 60%;
-  z-index: 2;
-}
-
-#left-side .title {  
-  color: white;  
-}
-
-#left-side .fancy {
-  color: var(--right-color);
-}
-
-#right-side {
-  background-color: var(--right-color);
-}
-
-#right-side .title {
-  color: var(--dark);
-}
-
-#right-side .fancy {
-  color: white;
-}
-
-/* -- YouTube Link Styles -- */
-
-#source-link {
-  top: 60px;
-}
-
-#source-link > i {
-  color: rgb(94, 106, 210);
-}
-
-#yt-link {  
-  top: 10px;
-}
-
-#yt-link > i {
-  color: rgb(239, 83, 80);
-}
-
-.meta-link {
-  align-items: center;
-  backdrop-filter: blur(3px);
-  background-color: rgba(40, 40, 40, 0.9);
-  border-radius: 6px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
-  cursor: pointer;  
-  display: inline-flex;
-  gap: 5px;
-  left: 10px;
+  font-size: 1.5em;
   padding: 10px 20px;
-  position: fixed;
+  position: fixed; /* Changed to fixed positioning */
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   text-decoration: none;
-  transition: background-color 350ms, border-color 350ms;
-  z-index: 10000;
+  text-align: center;
+  display: inline-block;
+  width: 200px; /* Adjust as needed for desired button size */
+  height: 50px; /* Adjust as needed for desired button size */
+  line-height: 50px; /* Adjust to vertically center text */
+  z-index: 3; /* Ensure the button stays above other content */
 }
 
-.meta-link:hover {
-  background-color: rgb(40, 40, 40);
-}
-
-.meta-link > i, .meta-link > span {
-  height: 20px;
-  line-height: 20px;
-}
-
-.meta-link > span {
-  color: white;
-  font-family: "Rubik", sans-serif;
-  transition: color 600ms;
+#subpage-button:hover {
+  background-color: var(--c1);
+  color: var(--c2);
+  border: 2px solid var(--c2);
 }
